Fixed background color not showing

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-* {
+body {
     background-color: "#f7b92a";
 }
 .navbar ul {
